# grosze_bot_rs

./: Cargo.toml  Dockerfile  docker_compose.yaml
migrations/20250712000000_create_users/: up.sql
migrations/20250712000001_create_contacts/: up.sql
migrations/20250712000002_create_transactions/: up.sql
src/: db_commands.rs  db_util.rs  inputting_status.rs  main.rs  models.rs  schema.rs  telegram_util.rs
